<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context="org.medhat.dhbwlayout2.MainActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/y1" android:labelFor="@+id/editText1"
                android:layout_marginBottom="@dimen/edit_function_table_margin"
                android:layout_marginTop="@dimen/edit_function_table_margin"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginBottom="@dimen/edit_function_table_margin"
                android:layout_marginTop="@dimen/edit_function_table_margin"
                android:inputType="textMultiLine" >
                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/y2" android:labelFor="@+id/editText2"
                android:layout_marginBottom="@dimen/edit_function_table_margin"
                android:layout_marginTop="@dimen/edit_function_table_margin"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginBottom="@dimen/edit_function_table_margin"
                android:layout_marginTop="@dimen/edit_function_table_margin"
                android:inputType="textMultiLine" >
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/y3" android:labelFor="@+id/editText3"
                android:layout_marginBottom="@dimen/edit_function_table_margin"
                android:layout_marginTop="@dimen/edit_function_table_margin"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginBottom="@dimen/edit_function_table_margin"
                android:layout_marginTop="@dimen/edit_function_table_margin"
                android:inputType="textMultiLine" >
                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/y4" android:labelFor="@+id/editText4"
                android:layout_marginBottom="@dimen/edit_function_table_margin"
                android:layout_marginTop="@dimen/edit_function_table_margin"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginBottom="@dimen/edit_function_table_margin"
                android:layout_marginTop="@dimen/edit_function_table_margin"
                android:inputType="textMultiLine" >
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView5"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/y5" android:labelFor="@+id/editText5"
                android:layout_marginBottom="@dimen/edit_function_table_margin"
                android:layout_marginTop="@dimen/edit_function_table_margin"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginBottom="@dimen/edit_function_table_margin"
                android:layout_marginTop="@dimen/edit_function_table_margin"
                android:inputType="textMultiLine" >
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button android:id="@+id/button1"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edit_function_table_margin"
                android:layout_marginTop="@dimen/edit_function_table_margin"
                android:text="@string/label_plotButton"
                />
        </TableRow>



    </TableLayout>

</ScrollView>